// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip renders always active 1`] = `
Array [
  <span
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Hello World
  </span>,
  <div
    className="css-119bhfp-TooltipContainer elvxd0x0"
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    Tooltip Content
    <span
      className="css-1ht2yha-TooltipArrow elvxd0x1"
    />
  </div>,
]
`;

exports[`Tooltip renders correctly 1`] = `
<span
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Hello World
</span>
`;

exports[`Tooltip renders in light mode 1`] = `
Array [
  <span
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Hello World
  </span>,
  <div
    className="css-r224ox-TooltipContainer-setLightMode elvxd0x0"
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    Tooltip Content
    <span
      className="css-1ht2yha-TooltipArrow elvxd0x1"
    />
  </div>,
]
`;
